# natshell

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENT_PLAN.md  LICENSE  Modelfile.nemotron-64k  PROJECT_SCAFFOLD.md  README.md  SECURITY.md  SKILL_AUTHORING.md  SKILL_SYSTEM_PLAN.md  config.default.toml  install.sh  natshell-marketing.html  pyproject.toml  uninstall.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/: index.html
natshell-scaffold/: PROJECT_SCAFFOLD.md  config.default.toml  pyproject.toml
natshell-scaffold/src/natshell/: app.py  config.py
natshell-scaffold/src/natshell/agent/: context.py  loop.py  system_prompt.py
natshell-scaffold/src/natshell/inference/: local.py  remote.py
natshell-scaffold/src/natshell/safety/: classifier.py
natshell-scaffold/src/natshell/tools/: execute_shell.py  list_directory.py  search_files.py  write_file.py
src/natshell/: __main__.py  app.py  backup.py  commands.py  config.default.toml  config.py  gpu.py  headless.py  mcp_server.py  model_manager.py  platform.py  plugins.py  session.py  setup_wizard.py
src/natshell/agent/: context.py  context_manager.py  loop.py  memory_files.py  memory_store.py  plan.py  plan_executor.py  plan_state.py  system_prompt.py  working_memory.py
src/natshell/inference/: engine.py  local.py  ollama.py  remote.py
src/natshell/safety/: classifier.py
src/natshell/skills/: __init__.py
src/natshell/skills/coding/: SKILL.md
src/natshell/skills/coding/references/: go.md  javascript.md  python.md  rust.md
src/natshell/skills/data-analysis/: SKILL.md
src/natshell/skills/data-analysis/references/: jq-recipes.md
src/natshell/skills/data-analysis/scripts/: csv_summary.py
src/natshell/skills/docx/: SKILL.md
src/natshell/skills/docx/scripts/: docx_replace.py  docx_text.py
src/natshell/skills/git-workflow/: SKILL.md
src/natshell/skills/git-workflow/references/: conventional-commits.md
src/natshell/skills/markdown-docs/: SKILL.md
src/natshell/skills/markdown-docs/references/: keep-a-changelog.md
src/natshell/skills/pdf/: SKILL.md
src/natshell/skills/spreadsheet/: SKILL.md
src/natshell/skills/system-admin/: SKILL.md
src/natshell/skills/testing/: SKILL.md
src/natshell/skills/web-research/: SKILL.md
src/natshell/tools/: edit_file.py  execute_shell.py  fetch_url.py  file_tracker.py  git_tool.py  kiwix_search.py  limits.py  list_directory.py  natshell_help.py  read_file.py  recall_memory.py  registry.py  run_code.py  search_files.py  skill.py  update_config.py  write_file.py
src/natshell/ui/: clipboard.py  code_fence.py  commands.py  escape.py  styles.tcss  syntax_render.py  widgets.py
tests/: test_agent.py  test_backup.py  test_clipboard.py  test_code_fence.py  test_coding_tools.py  test_commands.py  test_compaction_integration.py  test_context.py  test_context_manager.py  test_engine_preference.py  test_engine_swap.py  test_fetch_url.py  test_file_tracker.py  test_git_tool.py  test_gpu.py  test_headless.py  test_history_input.py  test_kiwix_search.py  test_mcp_server.py  test_memory_files.py  test_memory_store.py  test_message_queue.py  test_model_download.py  test_natshell_help.py  test_ollama.py  test_ollama_config.py  test_plan_execution.py  test_plan_parser.py  test_plan_state.py  test_platform.py  test_plugins.py  test_profiles.py  test_prompt_cache.py  test_recall_memory.py  test_safety.py  test_sessions.py  test_setup_wizard.py  test_skills.py  test_slash_commands.py  test_syntax_render.py  (+5 more)
(+8 files in other folders)
